added restaurant endpoint
